--- a/cart.html
+++ b/cart.html
@@ -6,9 +6,29 @@
   <title>Cart | RISHABH & BROTHERS SERVICES</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
-    header { background-color: #FF6600; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+    header {
+      background: linear-gradient(90deg, #1e88e5 60%, #f5f5f5 100%);
+      color: #1e88e5;
+      padding: 20px 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
     header img { height: 60px; }
-    nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; }
+    nav a {
+      color: #1e88e5;
+      background: #fff;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 8px 16px;
+      border-radius: 4px;
+      transition: background 0.2s, color 0.2s;
+    }
+    nav a:hover {
+      background: #e3eaf2;
+      color: #0d47a1;
+    }
     .cart { max-width: 900px; margin: 40px auto; background: #fff; padding: 32px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); }
     .cart h2 { font-size: 32px; color: #1e88e5; text-align: center; margin-bottom: 24px; }
     table { width: 100%; border-collapse: collapse; margin-top: 24px; }
