--- a/cart.html
+++ b/cart.html
@@ -13,6 +13,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      flex-wrap: wrap;
     }
     header img { height: 60px; }
     nav a {
@@ -43,10 +44,10 @@
 </head>
 <body>
   <header>
-    <div>
-      <a href="index.html">
-      </a><img src="logo.jpg" alt="Company Logo" /><h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
-      <p>Professional, Reliable, and Affordable Services</p>
+    <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">
+      <a href="index.html"><img src="logo.jpg" alt="Company Logo" style="height:60px;" /></a>
+      <h1 style="margin:0;font-size:2.2rem;color:#1e88e5;">RISHABH & BROTHERS SERVICES</h1>
+      <p style="margin:0;color:#1976d2;font-size:1rem;">Professional, Reliable, and Affordable Services</p>
     </div>
     <nav>
       <a href="index.html">Home</a>
