--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
         header {
             background: linear-gradient(90deg, #1e88e5 60%, #f5f5f5 100%);
-            color: #1e88e5;
+            color: #f5f6f8;
             padding: 20px 40px;
             display: flex;
             align-items: center;
