--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,7 @@
     <header>
         <div>
             <a href="index.html">
-            </a><img src="logo.jpg" alt="Company Logo" /><h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
+            </a><img src="logo.jpg" alt="Company Logo" /><h1 style="color:#fff;">Welcome to RISHABH & BROTHERS SERVICES</h1>
         <p>Professional, Reliable, and Affordable Services</p>
         </div>
         <nav>
