--- a/product-list.html
+++ b/product-list.html
@@ -45,7 +45,7 @@
         <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">
             <a href="index.html"><img src="logo.jpg" alt="Company Logo" style="height:60px;" /></a>
             <h1 style="margin:0;font-size:2.2rem;color:#fff;">RISHABH & BROTHERS SERVICES</h1>
-            <p style="margin:0;color:#1976d2;font-size:1rem;">Professional, Reliable, and Affordable Services</p>
+            <p style="margin:0;color:#fff;font-size:1rem;">Reliable Electrical and Engineering Solutions</p>
         </div>
         <nav>
             <a href="index.html">Home</a>
