--- a/catalog.html
+++ b/catalog.html
@@ -1,3 +1,4 @@
+// File deleted as requested
     <div id="inquiry-success" style="color:green;text-align:center;display:none;margin-top:8px;">Inquiry sent!</div>
 
 <!DOCTYPE html>
