--- a/product-list.html
+++ b/product-list.html
@@ -58,7 +58,7 @@
     </header>
 
     <section class="product-list">
-        <h2>Product List</h2>
+    <h2>Products</h2>
         <table>
             <thead>
                 <tr>
