--- a/product-list.html
+++ b/product-list.html
@@ -53,7 +53,7 @@
             <a href="catalog.html">Product Catalog</a>
             <a href="contact.html">Contact</a>
             <a href="cart.html">Cart</a>
-            <a href="product-list.html">Product List</a>
+            <a href="product-list.html">Products</a>
         </nav>
     </header>
 
