--- a/product-list.html
+++ b/product-list.html
@@ -41,13 +41,13 @@
     </style>
 </head>
 <body>
-    <header style="flex-direction:column;align-items:center;justify-content:center;">
-        <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;">
-            <a href="index.html"><img src="logo.jpg" alt="Company Logo" style="height:60px;margin-bottom:8px;" /></a>
-            <h1 style="margin:0;font-size:2.2rem;color:#fff;text-align:center;">RISHABH & BROTHERS SERVICES</h1>
-            <p style="margin:0;color:#fff;font-size:1rem;text-align:center;">Reliable Electrical and Engineering Solutions</p>
+    <header>
+        <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">
+            <a href="index.html"><img src="logo.jpg" alt="Company Logo" style="height:60px;" /></a>
+            <h1 style="margin:0;font-size:2.2rem;color:#fff;">RISHABH & BROTHERS SERVICES</h1>
+            <p style="margin:0;color:#fff;font-size:1rem;">Reliable Electrical and Engineering Solutions</p>
         </div>
-        <nav style="margin-top:18px;display:flex;justify-content:center;flex-wrap:wrap;gap:12px;">
+        <nav>
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
             <a href="contact.html">Contact</a>
