--- a/contact.html
+++ b/contact.html
@@ -20,17 +20,16 @@
 </head>
 <body>
   <header>
-    <div>
-      <a href="index.html">
-      </a><img src="logo.jpg" alt="Company Logo" /><h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
-    <p>Professional, Reliable, and Affordable Services</p>
+    <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">
+      <a href="index.html"><img src="logo.jpg" alt="Company Logo" style="height:60px;" /></a>
+      <h1 style="margin:0;font-size:2.2rem;color:#fff;">RISHABH & BROTHERS SERVICES</h1>
+      <p style="margin:0;color:#fff;font-size:1rem;">Reliable Electrical and Engineering Solutions</p>
     </div>
     <nav>
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
-      <a href="catalog.html">Product Catalog</a>
       <a href="contact.html">Contact</a>
-      <a href="cart.html">Cart</a>
+      <a href="product-list.html">Products</a>
     </nav>
   </header>
 
