--- a/product-list.html
+++ b/product-list.html
@@ -135,5 +135,13 @@
     <footer>
         <p>&copy; 2024 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
     </footer>
+    <script>
+        function openInquiryPopup(selectedModel) {
+            document.getElementById('inquiry-popup').style.display = 'flex';
+        }
+        function closeInquiryPopup() {
+            document.getElementById('inquiry-popup').style.display = 'none';
+        }
+    </script>
 </body>
 </html>
