--- a/index.html
+++ b/index.html
@@ -6,9 +6,31 @@
   <title>Home | RISHABH & BROTHERS SERVICES</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
-    header { background-color: #FF6600; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
-    header img { height: 60px; }
-    nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; }
+  header {
+    background: linear-gradient(90deg, #1e88e5 60%, #f5f5f5 100%);
+    color: #1e88e5;
+    padding: 20px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  header img { height: 60px; }
+  nav a {
+    color: #1e88e5;
+    background: #fff;
+    margin-left: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 8px 16px;
+    border-radius: 4px;
+    transition: background 0.2s, color 0.2s;
+  }
+  nav a:hover {
+    background: #e3eaf2;
+    color: #0d47a1;
+  }
+  footer { background: #0d47a1; color: white; text-align: center; padding: 20px; }
     .slider { position: relative; width: 100%; max-height: 500px; overflow: hidden; }
     .slides { display: flex; width: 400%; animation: slide 16s infinite; }
     .slides img { width: 100%; height: auto; object-fit: cover; }
