--- a/product-list.html
+++ b/product-list.html
@@ -37,7 +37,7 @@
         th { background: #f0f0f0; color: #333; }
         tr:hover { background: #f9f9f9; }
         .product-img { width: 80px; height: 80px; object-fit: contain; border-radius: 4px; background: #eee; }
-        footer { background: #0d47a1; color: white; text-align: center; padding: 20px; }
+    footer { background: #263238; color: white; text-align: center; padding: 20px; }
     </style>
 </head>
 <body>
