--- a/product-list.html
+++ b/product-list.html
@@ -30,14 +30,32 @@
             background: #e3eaf2;
             color: #0d47a1;
         }
-        .product-list { max-width: 900px; margin: 40px auto; background: #fff; padding: 32px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); }
+        .product-list {
+            width: 100vw;
+            margin: 0;
+            background: #fff;
+            padding: 32px 0;
+            border-radius: 0;
+            box-shadow: none;
+        }
         .product-list h2 { font-size: 32px; color: #1e88e5; text-align: center; margin-bottom: 24px; }
         table { width: 100%; border-collapse: collapse; margin-top: 24px; }
         th, td { padding: 12px 16px; border-bottom: 1px solid #eaeaea; text-align: left; }
         th { background: #f0f0f0; color: #333; }
         tr:hover { background: #f9f9f9; }
         .product-img { width: 80px; height: 80px; object-fit: contain; border-radius: 4px; background: #eee; }
-    footer { background: #0d47a1; color: white; text-align: center; padding: 20px; }
+        footer {
+            background: #0d47a1;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            width: 100vw;
+            position: relative;
+            left: 50%;
+            right: 50%;
+            margin-left: -50vw;
+            margin-right: -50vw;
+        }
     </style>
 </head>
 <body>
