--- a/product-list.html
+++ b/product-list.html
@@ -31,12 +31,12 @@
             color: #0d47a1;
         }
         .product-list {
-            width: 100vw;
-            margin: 0;
+            max-width: 900px;
+            margin: 40px auto;
             background: #fff;
-            padding: 32px 0;
-            border-radius: 0;
-            box-shadow: none;
+            padding: 32px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
         }
         .product-list h2 { font-size: 32px; color: #1e88e5; text-align: center; margin-bottom: 24px; }
         table { width: 100%; border-collapse: collapse; margin-top: 24px; }
