--- a/product-list.html
+++ b/product-list.html
@@ -48,13 +48,15 @@
             background: #0d47a1;
             color: white;
             text-align: center;
-            padding: 20px;
-            width: 100vw;
-            position: relative;
-            left: 50%;
-            right: 50%;
-            margin-left: -50vw;
-            margin-right: -50vw;
+            padding: 20px 0;
+            width: 100%;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            z-index: 100;
+        }
+        body {
+            margin-bottom: 60px;
         }
     </style>
 </head>
