--- a/product-list.html
+++ b/product-list.html
@@ -50,13 +50,9 @@
             text-align: center;
             padding: 20px 0;
             width: 100%;
-            position: fixed;
+            position: relative;
             left: 0;
             bottom: 0;
-            z-index: 100;
-        }
-        body {
-            margin-bottom: 60px;
         }
     </style>
 </head>
