--- a/contact.html
+++ b/contact.html
@@ -48,10 +48,10 @@
       <p style="margin:0;color:#fff;font-size:1rem;">Reliable Electrical and Engineering Solutions</p>
     </div>
     <nav>
-  <a href="index.html">Home</a>
-  <a href="services.html">Services</a>
-  <a href="product-list.html">Products</a>
-  <a href="contact.html">Contact</a>
+  <a href="/index">Home</a>
+  <a href="/services">Services</a>
+  <a href="/product-list">Products</a>
+  <a href="/contact">Contact</a>
     </nav>
   </header>
 
