--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+---OCTYPE html>
+layout: default>
+title: Products
+permalink: /product-list/>
+---meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | RISHABH & BROTHERS SERVICES</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
-  header {
-    background: linear-gradient(90deg, #1e88e5 60%, #f5f5f5 100%);
-    color: #1e88e5;
+<nav>
+  <a href="/index">Home</a>ans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
+  <a href="/services">Services</a>
+  <a href="/product-list">Products</a>t(90deg, #1e88e5 60%, #f5f5f5 100%);
+
+
+</nav>  <a href="/contact">Contact</a>    color: #1e88e5;
     padding: 20px 40px;
     display: flex;
     align-items: center;
