--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
----OCTYPE html>
-layout: default>
+---
+layout: default
 title: Products
-permalink: /product-list/>
----meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+permalink: /product-list/
+---
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | RISHABH & BROTHERS SERVICES</title>
 <nav>
   <a href="/index">Home</a>ans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
