--- a/index.html
+++ b/index.html
@@ -2,41 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | RISHABH & BROTHERS SERVICES</title>
-<nav>
-  <a href="/index">Home</a>ans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
-  <a href="/services">Services</a>
-  <a href="/product-list">Products</a>t(90deg, #1e88e5 60%, #f5f5f5 100%);
-
-
-</nav>  <a href="/contact">Contact</a>    color: #1e88e5;
-    padding: 20px 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  header img { height: 60px; }
-  nav a {
-    color: #1e88e5;
-    background: #fff;
-    margin-left: 20px;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 8px 16px;
-    border-radius: 4px;
-    transition: background 0.2s, color 0.2s;
-  }
-  nav a:hover {
-    background: #e3eaf2;
-    color: #0d47a1;
-  }
-  footer { background: #0d47a1; color: white; text-align: center; padding: 20px; }
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
+    header {
+      background: linear-gradient(90deg, #1e88e5 60%, #f5f5f5 100%);
+      color: #1e88e5;
+      padding: 20px 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    header img { height: 60px; }
+    nav a {
+      color: #1e88e5;
+      background: #fff;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 8px 16px;
+      border-radius: 4px;
+      transition: background 0.2s, color 0.2s;
+    }
+    nav a:hover {
+      background: #e3eaf2;
+      color: #0d47a1;
+    }
+    .main-content {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px #eaeaea;
+      padding: 32px;
+    }
     .slider { position: relative; width: 100%; max-height: 500px; overflow: hidden; }
     .slides { display: flex; width: 400%; animation: slide 16s infinite; }
     .slides img { width: 100%; height: auto; object-fit: cover; }
-
     @keyframes slide {
       0%   { margin-left: 0%; }
       20%  { margin-left: 0%; }
@@ -48,31 +52,27 @@
       95%  { margin-left: -300%; }
       100% { margin-left: 0%; }
     }
-
     .hero-text { text-align: center; padding: 40px; background: #e3f2fd; }
     .hero-text h1 { font-size: 36px; color: #0d47a1; }
     .hero-text p { font-size: 18px; }
-
-    footer { background: #0d47a1; color: white; text-align: center; padding: 20px; }
+    footer { background: #0d47a1; color: white; text-align: center; padding: 20px; width: 100%; margin-top: 40px; }
   </style>
 </head>
 <body>
-
   <header>
     <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">
-      <a href="index.html"><img src="logo.jpg" alt="Company Logo" style="height:60px;" /></a>
+      <a href="/index"><img src="logo.jpg" alt="Company Logo" style="height:60px;" /></a>
       <h1 style="margin:0;font-size:2.2rem;color:#fff;">RISHABH & BROTHERS SERVICES</h1>
       <p style="margin:0;color:#fff;font-size:1rem;">Reliable Electrical and Engineering Solutions</p>
     </div>
     <nav>
-  <a href="index.html">Home</a>
-  <a href="services.html">Services</a>
-  <a href="product-list.html">Products</a>
-  <a href="contact.html">Contact</a>
+      <a href="/index">Home</a>
+      <a href="/services">Services</a>
+      <a href="/product-list">Products</a>
+      <a href="/contact">Contact</a>
     </nav>
   </header>
 
-  <!-- Image Slider -->
   <div class="slider">
     <div class="slides">
       <img src="electrical1.jpg" alt="Electrical Panel Work" />
@@ -82,7 +82,14 @@
     </div>
   </div>
 
-  
+  <div class="main-content">
+    <div class="hero-text">
+      <h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
+      <p>Reliable Electrical and Engineering Solutions for all your needs.</p>
+    </div>
+    <!-- Add more homepage content here -->
+  </div>
+
   <footer>
     <p>&copy; 2024 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
   </footer>
