--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
       background: #e3eaf2;
       color: #0d47a1;
     }
+    .hero-banner {
+      width: 100%;
+      background: #e3f2fd;
+      text-align: center;
+      padding: 48px 0 32px 0;
+      margin: 0;
+    }
+    .hero-banner h1 {
+      font-size: 2.5rem;
+      color: #0d47a1;
+      margin: 0;
+      letter-spacing: 2px;
+    }
+    .hero-banner p {
+      font-size: 1.2rem;
+      color: #1565c0;
+      margin-top: 12px;
+    }
     .main-content {
       max-width: 900px;
       margin: 40px auto;
@@ -52,9 +70,6 @@
       95%  { margin-left: -300%; }
       100% { margin-left: 0%; }
     }
-    .hero-text { text-align: center; padding: 40px; background: #e3f2fd; }
-    .hero-text h1 { font-size: 36px; color: #0d47a1; }
-    .hero-text p { font-size: 18px; }
     footer { background: #0d47a1; color: white; text-align: center; padding: 20px; width: 100%; margin-top: 40px; }
   </style>
 </head>
@@ -73,11 +88,9 @@
     </nav>
   </header>
 
-  <div class="main-content">
-    <div class="hero-text">
-      <h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
-      <p>Reliable Electrical and Engineering Solutions for all your needs.</p>
-    </div>
+  <div class="hero-banner">
+    <h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
+    <p>Reliable Electrical and Engineering Solutions for all your needs.</p>
   </div>
 
   <div class="slider">
