--- a/index.html
+++ b/index.html
@@ -56,9 +56,31 @@
       box-shadow: 0 2px 12px #eaeaea;
       padding: 32px;
     }
-    .slider { position: relative; width: 100%; max-height: 500px; overflow: hidden; }
-    .slides { display: flex; width: 400%; animation: slide 16s infinite; }
-    .slides img { width: 100%; height: auto; object-fit: cover; }
+    .slider {
+      position: relative;
+      width: 100vw;
+      max-width: 100%;
+      min-width: 100%;
+      margin: 0;
+      left: 50%;
+      right: 50%;
+      transform: translateX(-50%);
+      box-sizing: border-box;
+      max-height: 500px;
+      overflow: hidden;
+    }
+    .slides {
+      display: flex;
+      width: 400%;
+      animation: slide 16s infinite;
+    }
+    .slides img {
+      width: 100vw;
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
+      display: block;
+    }
     @keyframes slide {
       0%   { margin-left: 0%; }
       20%  { margin-left: 0%; }
