--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
 <body>
   <header>
     <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">
-      <a href="index.html"><img src="logo.jpg" alt="Company Logo" style="height:60px;" /></a>
+      <a href="index"><img src="logo.jpg" alt="Company Logo" style="height:60px;" /></a>
       <h1 style="margin:0;font-size:2.2rem;color:#fff;">RISHABH & BROTHERS SERVICES</h1>
       <p style="margin:0;color:#fff;font-size:1rem;">Reliable Electrical and Engineering Solutions</p>
     </div>
