--- a/product-list.html
+++ b/product-list.html
@@ -55,7 +55,7 @@
 <body>
     <header>
         <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">
-            <a href="index.html" style="display:inline-block;"><img src="logo.jpg" alt="Company Logo" style="height:60px;cursor:pointer;" /></a>
+            <a href="index" style="display:inline-block;"><img src="logo.jpg" alt="Company Logo" style="height:60px;cursor:pointer;" /></a>
             <h1 style="margin:0;font-size:2.2rem;color:#fff;">RISHABH & BROTHERS SERVICES</h1>
             <p style="margin:0;color:#fff;font-size:1rem;">Reliable Electrical and Engineering Solutions</p>
         </div>
