--- a/product-list.html
+++ b/product-list.html
@@ -64,21 +64,23 @@
             background: #fff3cd;
             color: #856404;
             border: 1px solid rgba(133,100,4,0.12);
-            box-shadow: 0 1px 2px rgba(0,0,0,0.03);hadow: 0 1px 2px rgba(0,0,0,0.03);
+            box-shadow: 0 1px 2px rgba(0,0,0,0.03);
         }
 
         /* small screens: allow table to scroll */
         @media (max-width: 720px) {
-            .product-list { padding: 16px; margin: 20px auto; }: 20px auto; }
+            .product-list { padding: 16px; margin: 20px auto; }
             table { display: block; width: 100%; overflow-x: auto; -webkit-overflow-scrolling: touch; }
             th, td { white-space: nowrap; }
-        }}
+        }
     </style>
 </head>
 <body>
     <header>
-        <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">irection:column;align-items:flex-start;min-width:220px;">
-            <a href="index" style="display:inline-block;"><img src="logo.jpg" alt="Company Logo" style="height:60px;cursor:pointer;" /></a>splay:inline-block;"><img src="logo.jpg" alt="Company Logo" style="height:60px;cursor:pointer;" /></a>
+        <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">
+            <a href="/index" style="display:inline-block;">
+                <img src="logo.jpg" alt="Company Logo" style="height:60px;cursor:pointer;" />
+            </a>
             <h1 style="margin:0;font-size:2.2rem;color:#fff;">RISHABH & BROTHERS SERVICES</h1>
             <p style="margin:0;color:#fff;font-size:1rem;">Reliable Electrical and Engineering Solutions</p>
         </div>
