--- a/product-list.html
+++ b/product-list.html
@@ -11,30 +11,35 @@
             padding: 0;
             background-color: #fcfcfc;
         }
+        /* Header: logo and company name side-by-side, responsive */
         header {
             background: linear-gradient(90deg, #1e88e5 60%, #f5f5f5 100%);
             color: #1e88e5;
-            padding: 20px 40px;
+            padding: 18px 28px;
             display: flex;
             align-items: center;
             justify-content: space-between;
             flex-wrap: wrap;
+            gap: 12px;
         }
-        header img { height: 60px; }
-        nav a {
-            color: #1e88e5;
-            background: #fff;
-            margin-left: 20px;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 8px 16px;
-            border-radius: 4px;
-            transition: background 0.2s, color 0.2s;
+        .header-brand {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            min-width: 180px;
         }
-        nav a:hover {
-            background: #e3eaf2;
-            color: #0d47a1;
+        .header-brand img { height: 90px; width: auto; display:block; }
+        .site-title { margin:0; font-size:1.4rem; color:#fff; line-height:1; }
+        .site-tag { margin:0; color:#fff; font-size:0.95rem; opacity:0.95; }
+
+        @media (max-width: 520px) {
+            .header-brand img { height: 62px; }
+            .site-title { font-size: 1.05rem; }
+            header { padding: 12px 12px; }
+            nav { width: 100%; display:flex; gap:8px; justify-content:center; margin-top:8px; }
+            nav a { padding:6px 10px; margin-left:0; }
         }
+
         .product-list {
             max-width: 900px;
             margin: 40px auto;
@@ -77,12 +82,14 @@
 </head>
 <body>
     <header>
-        <div style="display:flex;flex-direction:column;align-items:flex-start;min-width:220px;">
+        <div class="header-brand">
             <a href="/index" style="display:inline-block;">
-                <img src="logo.jpg" alt="Company Logo" style="height:60px;cursor:pointer;" />
+                <img src="logo.jpg" alt="Company Logo" style="cursor:pointer;" />
             </a>
-            <h1 style="margin:0;font-size:2.2rem;color:#fff;">RISHABH & BROTHERS SERVICES</h1>
-            <p style="margin:0;color:#fff;font-size:1rem;">Reliable Electrical and Engineering Solutions</p>
+            <div>
+                <h1 class="site-title">RISHABH & BROTHERS SERVICES</h1>
+                <p class="site-tag">Reliable Electrical and Engineering Solutions</p>
+            </div>
         </div>
         <nav>
             <a href="/index">Home</a>
@@ -170,24 +177,15 @@
                 </tr>
             </tbody>
         </table>
-        <!-- Inquiry Popup -->
-        <div id="inquiry-popup" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.5);z-index:9999;align-items:center;justify-content:center;">
-            <div style="background:#fff;padding:32px;border-radius:8px;max-width:600px;width:90vw;margin:auto;position:relative;">
-                <button onclick="closeInquiryPopup()" style="position:absolute;top:8px;right:8px;background:#e53935;color:#fff;border:none;border-radius:50%;width:32px;height:32px;font-size:18px;cursor:pointer;">&times;</button>
-                <h2 style="color:#1e88e5;text-align:center;">Product Inquiry</h2>
-                <iframe aria-label='Product Inquiry' frameborder="0" style="height:500px;width:100%;border:none;" src='https://forms.zohopublic.in/rishabhraig1/form/ProductInquiryForm/formperma/cdGxNDhUCtJp5wN4KqqRy06JOKJPUBQvoZxY91saKtk'></iframe>
-            </div>
-        </div>
+    </section>
 
     <footer>
-        <p>&copy; 2024 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
+        <p>&copy; 2023 RISHABH & BROTHERS SERVICES. All rights reserved.</p>
     </footer>
+
     <script>
-        function openInquiryPopup(selectedModel) {
-            document.getElementById('inquiry-popup').style.display = 'flex';
-        }
-        function closeInquiryPopup() {
-            document.getElementById('inquiry-popup').style.display = 'none';
+        function openInquiryPopup(model) {
+            alert("Inquiry for model: " + model);
         }
     </script>
 </body>
