Update product descriptions for modular boxes

--- a/product-list.html
+++ b/product-list.html
@@ -142,14 +142,14 @@
                 </tr>
                 <tr>
                     <td>8MS</td>
-                    <td>8 Module Slim Electrical Modular Box</td>
+                    <td>8 Module Square Electrical Modular Box</td>
                     <td><img src="8MS.jpg" alt="8MS Box" class="product-img"></td>
                     <td><span class="model-status coming-soon">Coming Soon</span></td>
                     <td><button onclick="openInquiryPopup('8MS')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
                 </tr>
                 <tr>
                     <td>8MH</td>
-                    <td>8 Module Heavy Electrical Modular Box</td>
+                    <td>8 Module Horizontal Electrical Modular Box</td>
                     <td><img src="8MH.jpg" alt="8MH Box" class="product-img"></td>
                     <td><span class="model-status coming-soon">Coming Soon</span></td>
                     <td><button onclick="openInquiryPopup('8MH')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
