--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 
   <div class="slider">
     <div class="slides">
-      <img src="electrical1.jpg" alt="Electrical Panel Work" />
-      <img src="electrical2.jpg" alt="Control Panel Installation" />
-      <img src="manpower1.jpg" alt="Skilled Manpower at Work" />
-      <img src="manpower2.jpg" alt="Site Work in Progress" />
+      <img src="1.jpg" alt="Electrical Panel Work" />
+      <img src="2.jpg" alt="Control Panel Installation" />
+      <img src="1.jpg" alt="Skilled Manpower at Work" />
+      <img src="2.jpg" alt="Site Work in Progress" />
     </div>
   </div>
 
